# FW_LED_Matrix_Board

./: .gitignore  Cargo.toml  README.md
board_applet/: Cargo.toml  README.md
board_applet/src/: lib.rs
matrix_board/: Cargo.toml  README.md
matrix_board/src/: lib.rs  main.rs
src/: main.rs
