[package]
name = "sig_rp2040_board_applet"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Applet library for matrix board"
repository = "https://github.com/sigroot/FW_LED_Matrix_Board"
readme = "README.md"
keywords = ["framework", "ledmatrix"]
categories = ["graphics", "parsing"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
